# cpp_sync_logger

./: CMakeLists.txt  LICENSE  README.md
include/: Logger.h
src/: Logger.cpp
test/: main.cpp
